# python-jokes-rust

./: .gitignore  README.md  pyproject.toml
.github/workflows/: CI.yml
rust/: Cargo.toml
rust/src/: lib.rs
src/: lib.rs
src/python_jokes_rust/: jokes_cli.py
